(feat) finish get video list and source upload func

--- a/qiniu-test.ipynb
+++ b/qiniu-test.ipynb
@@ -6,13 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-10-26T23:00:18.982461Z",
-     "end_time": "2023-10-26T23:00:19.143461Z"
+     "start_time": "2023-10-31T21:24:09.552498Z",
+     "end_time": "2023-10-31T21:24:10.057754Z"
     }
    },
    "outputs": [],
    "source": [
-    "import qiniu"
+    "import qiniu\n",
+    "import time\n",
+    "import requests"
    ]
   },
   {
@@ -40,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-26T23:00:19.143461Z",
-     "end_time": "2023-10-26T23:00:19.159035Z"
+     "start_time": "2023-10-31T21:24:10.057754Z",
+     "end_time": "2023-10-31T21:24:10.073370Z"
     }
    }
   },
@@ -56,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All is OK {'hash': 'FkwkxLPsVhf1C3FK7EsSVprQLktO', 'key': 'pupy dog here.mp4'}\n"
+      "All is OK {'hash': 'FkwkxLPsVhf1C3FK7EsSVprQLktO', 'key': 'user2/pupy dog here.mp4'}\n"
      ]
     }
    ],
@@ -75,9 +77,9 @@
     "\n",
     "# file upload\n",
     "token = q.upload_token(\"yy-short-video\")\n",
-    "key = 'pupy dog here.mp4'\n",
-    "file_path = './1185308075.mp4'\n",
-    "ret, info = qiniu.put_file(token, key, file_path, metadata={\"name\": \"xx\"})\n",
+    "key = 'user2/pupy dog here.mp4'\n",
+    "file_path = './data/upload/1185308075.mp4'\n",
+    "ret, info = qiniu.put_file(token, key, file_path, metadata=dict(name=\"tiantian\"))\n",
     "if ret is not None:\n",
     "    print('All is OK', ret)\n",
     "else:\n",
@@ -86,8 +88,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-26T17:43:41.031523Z",
-     "end_time": "2023-10-26T17:43:47.772844Z"
+     "start_time": "2023-10-31T16:12:50.876694Z",
+     "end_time": "2023-10-31T16:12:56.836419Z"
     }
    }
   },
@@ -102,35 +104,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "_ResponseInfo__response:<Response [200]>, exception:None, status_code:200, text_body:, req_id:A5UAAADdLNV9OJMX, x_log:-"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 初始化 BucketManager 空间管理类\n",
     "bucket = qiniu.BucketManager(q)\n",
     "\n",
     "# 指定测试空间与文件名\n",
     "bucket_name = \"yy-short-video\"\n",
-    "key = \"pupy dog here.mp4\"\n",
+    "key = \"user@1/video/5847849856.mp4\"\n",
     "\n",
-    "ret, info = bucket.stat(bucket_name, key)"
+    "ret, info = bucket.stat(bucket_name, key)\n",
+    "# ret, info = bucket.delete(bucket_name, key)\n",
+    "info"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-26T23:00:50.750145Z",
-     "end_time": "2023-10-26T23:00:50.881526Z"
+     "start_time": "2023-10-31T22:46:37.499136Z",
+     "end_time": "2023-10-31T22:46:37.580114Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_ResponseInfo__response:<Response [200]>, exception:None, status_code:200, text_body:{\"marker\":\"eyJjIjowLCJrIjoicHVweSBkb2cgaGVyZS5tcDQifQ==\",\"items\":[{\"key\":\"pupy dog here.mp4\",\"hash\":\"FkwkxLPsVhf1C3FK7EsSVprQLktO\",\"fsize\":1929256,\"mimeType\":\"video/mp4\",\"putTime\":16983134286283495,\"type\":0,\"status\":0,\"md5\":\"1954158dfcc00fa37bca49bbda9cfc2a\"}]}, req_id:MbYAAADfqIYgspEX, MbYAAADfqIYgspEX.peer, x_log:redis.g;redis.g;redis.g;RsDbClusterID:id_hash;v4mget;dirCount:0 itemCount:1 fdelCount:0;rs5_shard_hash.ls:3;RSF:4;RSF:7\n"
+      "[{'key': 'pdg.mp4', 'hash': 'FkwkxLPsVhf1C3FK7EsSVprQLktO', 'fsize': 1929256, 'mimeType': 'video/mp4', 'putTime': 16985474640459057, 'type': 0, 'status': 0, 'md5': '1954158dfcc00fa37bca49bbda9cfc2a', 'x-qn-meta': {'hhh': '123', 'nihao': 'aaa'}}]\n"
      ]
     }
    ],
@@ -143,37 +156,40 @@
     "# 标记\n",
     "marker = None\n",
     "ret, eof, info = bucket.list(bucket_name, prefix, marker, limit, delimiter)\n",
-    "print(info)"
+    "print(ret.get('items'))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-26T23:33:05.435476Z",
-     "end_time": "2023-10-26T23:33:05.589067Z"
+     "start_time": "2023-10-29T17:56:14.955949Z",
+     "end_time": "2023-10-29T17:56:15.020519Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "outputs": [
     {
      "data": {
-      "text/plain": "'redis.g;redis.g;redis.g;RsDbClusterID:id_hash;v4mget;dirCount:0 itemCount:2 fdelCount:0;rs5_shard_hash.ls:3;RSF:4;RSF:7'"
+      "text/plain": "'2023/10/29 10:44:24'"
      },
-     "execution_count": 8,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info.x_log"
+    "bucket_domains = bucket.list_domains(bucket_name)\n",
+    "print(q.private_download_url(f\"http://{bucket_domains[0][0]}/pdg.mp4\"))\n",
+    "unix_time = ret.get('items')[0].get('putTime') // (10**7)\n",
+    "time.strftime(\"%Y/%m/%d %H:%M:%S\", time.localtime(unix_time))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-26T23:30:32.448704Z",
-     "end_time": "2023-10-26T23:30:32.480164Z"
+     "start_time": "2023-10-29T18:11:33.353337Z",
+     "end_time": "2023-10-29T18:11:33.384174Z"
     }
    }
   },
@@ -233,6 +249,32 @@
     "ExecuteTime": {
      "start_time": "2023-10-26T17:45:26.057683Z",
      "end_time": "2023-10-26T17:45:26.073252Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'username': 'y',\n 'user_id': '1',\n 'title': '狗狗真可爱',\n 'submit_time': '12:11',\n 'midea_type': 'video'}"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"http://s31euirdk.bkt.clouddn.com/user%401/manifest/video/5847849856.mp4.json?e=1698758918&token=x34GCNDuYpCFsNtqkrri3Eagr6OANYyboWRZtWQv:_qNIXyubHGVZO_CHyqwkDzf43Yg=\"\n",
+    "data = requests.get(url).json()\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-31T21:25:01.393843Z",
+     "end_time": "2023-10-31T21:25:01.472380Z"
     }
    }
   }
