(feat) Add user and video get and create interface

--- a/qiniu-test.ipynb
+++ b/qiniu-test.ipynb
@@ -277,6 +277,234 @@
      "end_time": "2023-10-31T21:25:01.472380Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import json\n",
+    "import qiniu\n",
+    "import uuid\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from app_db.database import engine, get_db, SessionLocal\n",
+    "from app_db import schemas, crud, models\n",
+    "from app_login import get_password_hash\n",
+    "from app_utils.use_type import VideoCategoryType"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:19:39.073052Z",
+     "end_time": "2023-11-04T23:19:39.102467Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'category': 'sport', 'title': '美女摔跤比赛#美女摔跤', 'author': '老张动物园', 'creat_time': 1698125783, 'collect_count': 2077, 'comment_count': 722, 'share_count': 15307, 'like_cnt': 11739, 'avatar_id': 'cb95729f2bbb4e92af61c7fd7a75d19f', 'cover_id': '9115c44157d54a12bddad431dfed3cbb', 'video_id': 'b0627f32eb3c4c7ea0d8dc583c84ea1c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = r\"D:\\ZJU-use\\Competition\\七牛云\\assets\\short_videos\"\n",
+    "with open(os.path.join(root, 'meta_data.json'), 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "    print(data[0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:19:28.430681Z",
+     "end_time": "2023-11-04T23:19:28.440841Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "access_key = \"x34GCNDuYpCFsNtqkrri3Eagr6OANYyboWRZtWQv\"\n",
+    "secret_key = \"f_lfzdkBoEfOa_7a_0yrMOcIdfr-cHv9H463B5Xh\"\n",
+    "\n",
+    "q = qiniu.Auth(access_key, secret_key)\n",
+    "bucket = qiniu.BucketManager(q)\n",
+    "bucket_name = \"yy-short-video\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:19:28.443843Z",
+     "end_time": "2023-11-04T23:19:28.497810Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "def create_database_item():\n",
+    "    user = crud.get_user_by_username(db, username)\n",
+    "    if not user:\n",
+    "        hashed_password = get_password_hash(\"123\")\n",
+    "        db_user = models.User(username=username, email=f\"{username}@xx.com\", is_active=True,\n",
+    "                              hashed_password=hashed_password, avatar_key=avatar_key)\n",
+    "        db.add(db_user)\n",
+    "        db.commit()\n",
+    "        db.refresh(db_user)\n",
+    "        user = db_user\n",
+    "    db_video = models.Video(title=title, author=username, owner_id=user.id,\n",
+    "                            category=VideoCategoryType(category),\n",
+    "                            video_key=video_key, avatar_key=avatar_key, cover_key=cover_key,\n",
+    "                            like_count=like_count, collect_count=collect_count,\n",
+    "                            comment_count=comment_count, share_count=share_count)\n",
+    "    db.add(db_video)\n",
+    "    db.commit()\n",
+    "    db.refresh(db_video)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:19:28.465324Z",
+     "end_time": "2023-11-04T23:19:28.506935Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "token = q.upload_token(bucket_name)\n",
+    "db = SessionLocal()\n",
+    "for d in data:\n",
+    "    category = d.get(\"category\")\n",
+    "    title = d.get(\"title\")\n",
+    "    username = d.get(\"author\")\n",
+    "    collect_count = d.get(\"collect_count\")\n",
+    "    comment_count = d.get(\"comment_count\")\n",
+    "    share_count = d.get(\"share_count\")\n",
+    "    like_count = d.get(\"like_cnt\")\n",
+    "    video_path = os.path.join(root, \"video\", \"{}.mp4\".format(d.get(\"video_id\")))\n",
+    "    avatar_path = os.path.join(root, \"pic\", \"avatar\", \"{}.png\".format(d.get(\"avatar_id\")))\n",
+    "    cover_path = os.path.join(root, \"pic\", \"cover\", \"{}.png\".format(d.get(\"cover_id\")))\n",
+    "\n",
+    "    video_key = f'video/{\"{}.mp4\".format(d.get(\"video_id\"))}'\n",
+    "    avatar_key = f'avatar/{\"{}.png\".format(d.get(\"avatar_id\"))}'\n",
+    "    cover_key = f'cover/{\"{}.png\".format(d.get(\"cover_id\"))}'\n",
+    "\n",
+    "    create_database_item()\n",
+    "\n",
+    "    # ret1, info1 = qiniu.put_file(token, video_key, video_path)\n",
+    "    # ret2, info2 = qiniu.put_file(token, avatar_key, avatar_path)\n",
+    "    # ret3, info3 = qiniu.put_file(token, cover_key, cover_path)\n",
+    "\n",
+    "db.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:19:42.682568Z",
+     "end_time": "2023-11-04T23:20:37.948038Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<VideoCategoryType.SPORT: 'sport'>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if db.query(models.User).filter(models.User.username == username).first():\n",
+    "#     print(\"有\")\n",
+    "# else:\n",
+    "#     print(\"无\")\n",
+    "# db.query(models.User).filter(models.User.username == username).all()\n",
+    "\n",
+    "t = \"sport\"\n",
+    "a: VideoCategoryType = VideoCategoryType(t)\n",
+    "a\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T22:49:03.180310Z",
+     "end_time": "2023-11-04T22:49:03.200614Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<app_db.models.Video object at 0x0000029FAD44BDC0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = SessionLocal()\n",
+    "# user = crud.get_users(db)[0]\n",
+    "# user.videos[0].video_url = \"xxxx\"\n",
+    "# print(user.videos[0].video_url)\n",
+    "print(db.query(models.Video).filter(models.Video.author == 'yi').all())\n",
+    "videos = db.query(models.Video).filter(models.Video.author == 'yi').all()\n",
+    "db.close()\n",
+    "# del db"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T23:07:54.488673Z",
+     "end_time": "2023-11-04T23:07:54.529979Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "datetime.datetime(2023, 11, 4, 21, 33, 37, 404186)"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.now()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-04T21:33:37.406186Z",
+     "end_time": "2023-11-04T21:33:37.429185Z"
+    }
+   }
   }
  ],
  "metadata": {
