(feat) Add user register

--- a/qiniu-test.ipynb
+++ b/qiniu-test.ipynb
@@ -505,6 +505,134 @@
      "end_time": "2023-11-04T21:33:37.429185Z"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Mail Test"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "import yagmail\n",
+    "from jose import jwt\n",
+    "from app_utils.CONST import SECRET_KEY, ALGORITHM\n",
+    "import socket"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-06T23:08:13.879831Z",
+     "end_time": "2023-11-06T23:08:13.895118Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "yagmail.register(\"abyseas@163.com\", \"LTLQCBZOVPOGTHGH\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-06T19:30:19.983128Z",
+     "end_time": "2023-11-06T19:30:20.499243Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['3309382131@qq.com'],\n 'Content-Type: multipart/mixed; boundary=\"===============1024379258327884660==\"\\nMIME-Version: 1.0\\nDate: Mon, 06 Nov 2023 12:12:32 -0000\\nSubject: Test mail\\nFrom: niaho <abyseas@163.com>\\nTo: 3309382131@qq.com\\nMessage-ID: <37c7a1c2f1c1bcda7d37d513c83e2786@yagmail>\\n\\n--===============1024379258327884660==\\nContent-Type: multipart/alternative; boundary=\"===============0168900914519782985==\"\\nMIME-Version: 1.0\\n\\n--===============0168900914519782985==\\nContent-Type: text/plain; charset=\"utf-8\"\\nMIME-Version: 1.0\\nContent-Transfer-Encoding: base64\\n\\nVGhpcyBpcyB0aGUgYm9keSwgYW5kIGhlcmUgaXMganVzdCB0ZXh0IGh0dHA6Ly9zb21lZG9tYWlu\\nL2ltYWdlLnBuZwpZb3UgY2FuIGZpbmQgYW4gYXVkaW8gZmlsZSBhdHRhY2hlZC4KL2xvY2FsL3Bh\\ndGgvc29uZy5tcDM=\\n\\n--===============0168900914519782985==\\nContent-Type: multipart/related; boundary=\"===============7336527193453937846==\"\\nMIME-Version: 1.0\\n\\n--===============7336527193453937846==\\nContent-Type: text/html; charset=\"utf-8\"\\nMIME-Version: 1.0\\nContent-Transfer-Encoding: base64\\n\\nPGh0bWw+PGhlYWQ+PC9oZWFkPjxib2R5PjxkaXY+VGhpcyBpcyB0aGUgYm9keSwgYW5kIGhlcmUg\\naXMganVzdCB0ZXh0IGh0dHA6Ly9zb21lZG9tYWluL2ltYWdlLnBuZzwvZGl2PjwvYm9keT48ZGl2\\nPllvdSBjYW4gZmluZCBhbiBhdWRpbyBmaWxlIGF0dGFjaGVkLjwvZGl2PjxodG1sPjxkaXY+L2xv\\nY2FsL3BhdGgvc29uZy5tcDM8L2Rpdj48L2h0bWw+PC9odG1sPg==\\n\\n--===============7336527193453937846==--\\n\\n--===============0168900914519782985==--\\n\\n--===============1024379258327884660==--\\n')"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mail_user= \"abyseas@163.com\"\n",
+    "mail_password = \"LTLQCBZOVPOGTHGH\"\n",
+    "mail_host = \"smtp.163.com\"\n",
+    "\n",
+    "yag = yagmail.SMTP(mail_user, host=mail_host)\n",
+    "yag.useralias = \"niaho\"\n",
+    "contents = ['This is the body, and here is just text http://somedomain/image.png',\n",
+    "            'You can find an audio file attached.', '/local/path/song.mp3']\n",
+    "yag.send('3309382131@qq.com', 'Test mail', contents, preview_only=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-06T20:12:32.268487Z",
+     "end_time": "2023-11-06T20:12:32.420484Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encode 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "token = jwt.encode({\"email\": \"123\"}, SECRET_KEY, algorithm=ALGORITHM)\n",
+    "\n",
+    "print(\"encode\", jwt.decode(token, SECRET_KEY, ALGORITHM).get(\"email\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-06T20:30:59.308611Z",
+     "end_time": "2023-11-06T20:30:59.326893Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'192.168.31.216'"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "host = socket.gethostbyname(socket.gethostname())\n",
+    "s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
+    "s.connect(('8.8.8.8', 80))\n",
+    "ip = s.getsockname()[0]\n",
+    "s.close()\n",
+    "ip"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-06T23:15:58.927773Z",
+     "end_time": "2023-11-06T23:15:58.959236Z"
+    }
+   }
   }
  ],
  "metadata": {
