(feat) change response code and login validate logic, add Table user new Colum

--- a/qiniu-test.ipynb
+++ b/qiniu-test.ipynb
@@ -293,7 +293,7 @@
     "from app_db.database import engine, get_db, SessionLocal\n",
     "from app_db import schemas, crud, models\n",
     "from app_login import get_password_hash\n",
-    "from app_utils.use_type import VideoCategoryType"
+    "from app_utils.custom_schemas import VideoCategoryType"
    ],
    "metadata": {
     "collapsed": false,
@@ -631,6 +631,185 @@
     "ExecuteTime": {
      "start_time": "2023-11-06T23:15:58.927773Z",
      "end_time": "2023-11-06T23:15:58.959236Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# database init"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Work\\softWare\\Producing\\JetBrains IDE\\PyCharm 2023.1\\Workspace\\qiniu-sv\\qiniu-sv\\lib\\site-packages\\pydantic\\_internal\\_config.py:317: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'orm_mode' has been renamed to 'from_attributes'\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import json\n",
+    "import qiniu\n",
+    "import uuid\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from app_db.database import engine, get_db, SessionLocal\n",
+    "from app_db import schemas, crud, models\n",
+    "from app_login import get_password_hash\n",
+    "from app_utils.custom_schemas import VideoCategoryType"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:18:01.699523Z",
+     "end_time": "2023-11-07T13:18:06.444128Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'category': 'sport', 'title': '美女摔跤比赛#美女摔跤', 'author': '老张动物园', 'creat_time': 1698125783, 'collect_count': 2077, 'comment_count': 722, 'share_count': 15307, 'like_cnt': 11739, 'avatar_id': 'cb95729f2bbb4e92af61c7fd7a75d19f', 'cover_id': '9115c44157d54a12bddad431dfed3cbb', 'video_id': 'b0627f32eb3c4c7ea0d8dc583c84ea1c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = r\"D:\\ZJU-use\\Competition\\七牛云\\assets\\short_videos\"\n",
+    "with open(os.path.join(root, 'meta_data.json'), 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "    print(data[0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:18:06.425934Z",
+     "end_time": "2023-11-07T13:18:06.446160Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "models.Base.metadata.create_all(bind=engine)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:23:24.961310Z",
+     "end_time": "2023-11-07T13:23:26.192108Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "def create_database_item():\n",
+    "    user = crud.get_user_by_username(db, username)\n",
+    "    if not user:\n",
+    "        hashed_password = get_password_hash(\"123\")\n",
+    "        db_user = models.User(username=username, email=f\"{username}@xx.com\", is_active=True,\n",
+    "                              hashed_password=hashed_password, avatar_key=avatar_key)\n",
+    "        db.add(db_user)\n",
+    "        db.commit()\n",
+    "        db.refresh(db_user)\n",
+    "        user = db_user\n",
+    "    db_video = models.Video(title=title, author=username, owner_id=user.id,\n",
+    "                            category=VideoCategoryType(category),\n",
+    "                            video_key=video_key, avatar_key=avatar_key, cover_key=cover_key,\n",
+    "                            like_count=like_count, collect_count=collect_count,\n",
+    "                            comment_count=comment_count, share_count=share_count)\n",
+    "    db.add(db_video)\n",
+    "    db.commit()\n",
+    "    db.refresh(db_video)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:18:06.446160Z",
+     "end_time": "2023-11-07T13:18:06.466518Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "db = SessionLocal()\n",
+    "for d in data:\n",
+    "    category = d.get(\"category\")\n",
+    "    title = d.get(\"title\")\n",
+    "    username = d.get(\"author\")\n",
+    "    collect_count = d.get(\"collect_count\")\n",
+    "    comment_count = d.get(\"comment_count\")\n",
+    "    share_count = d.get(\"share_count\")\n",
+    "    like_count = d.get(\"like_cnt\")\n",
+    "    video_path = os.path.join(root, \"video\", \"{}.mp4\".format(d.get(\"video_id\")))\n",
+    "    avatar_path = os.path.join(root, \"pic\", \"avatar\", \"{}.png\".format(d.get(\"avatar_id\")))\n",
+    "    cover_path = os.path.join(root, \"pic\", \"cover\", \"{}.png\".format(d.get(\"cover_id\")))\n",
+    "\n",
+    "    video_key = f'video/{\"{}.mp4\".format(d.get(\"video_id\"))}'\n",
+    "    avatar_key = f'avatar/{\"{}.png\".format(d.get(\"avatar_id\"))}'\n",
+    "    cover_key = f'cover/{\"{}.png\".format(d.get(\"cover_id\"))}'\n",
+    "\n",
+    "    create_database_item()\n",
+    "db.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:23:43.580948Z",
+     "end_time": "2023-11-07T13:24:32.724088Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'SessionLocal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m db \u001B[38;5;241m=\u001B[39m \u001B[43mSessionLocal\u001B[49m()\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(crud\u001B[38;5;241m.\u001B[39mget_user_by_username(db, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124my\u001B[39m\u001B[38;5;124m\"\u001B[39m))\n\u001B[0;32m      3\u001B[0m db\u001B[38;5;241m.\u001B[39mclose()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'SessionLocal' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "db = SessionLocal()\n",
+    "print(crud.get_user_by_username(db, \"y\"))\n",
+    "db.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-07T13:23:39.265385Z",
+     "end_time": "2023-11-07T13:23:39.333492Z"
     }
    }
   }
