(feat) add number show format change and user avatar url field

--- a/qiniu-test.ipynb
+++ b/qiniu-test.ipynb
@@ -673,8 +673,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:18:01.699523Z",
-     "end_time": "2023-11-07T13:18:06.444128Z"
+     "start_time": "2023-11-07T21:04:29.942845Z",
+     "end_time": "2023-11-07T21:04:32.059795Z"
     }
    }
   },
@@ -699,14 +699,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:18:06.425934Z",
-     "end_time": "2023-11-07T13:18:06.446160Z"
+     "start_time": "2023-11-07T21:04:32.037370Z",
+     "end_time": "2023-11-07T21:04:32.131035Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "models.Base.metadata.create_all(bind=engine)"
@@ -714,14 +714,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:23:24.961310Z",
-     "end_time": "2023-11-07T13:23:26.192108Z"
+     "start_time": "2023-11-07T21:04:32.066473Z",
+     "end_time": "2023-11-07T21:04:33.222642Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def create_database_item():\n",
@@ -737,8 +737,8 @@
     "    db_video = models.Video(title=title, author=username, owner_id=user.id,\n",
     "                            category=VideoCategoryType(category),\n",
     "                            video_key=video_key, avatar_key=avatar_key, cover_key=cover_key,\n",
-    "                            like_count=like_count, collect_count=collect_count,\n",
-    "                            comment_count=comment_count, share_count=share_count)\n",
+    "                            like_cnt=like_count, collect_cnt=collect_count,\n",
+    "                            comment_cnt=comment_count, share_cnt=share_count)\n",
     "    db.add(db_video)\n",
     "    db.commit()\n",
     "    db.refresh(db_video)"
@@ -746,14 +746,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:18:06.446160Z",
-     "end_time": "2023-11-07T13:18:06.466518Z"
+     "start_time": "2023-11-07T21:04:33.212512Z",
+     "end_time": "2023-11-07T21:04:33.257151Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "db = SessionLocal()\n",
@@ -779,8 +779,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-07T13:23:43.580948Z",
-     "end_time": "2023-11-07T13:24:32.724088Z"
+     "start_time": "2023-11-07T21:04:33.230830Z",
+     "end_time": "2023-11-07T21:05:20.567071Z"
     }
    }
   },
